--- a/composer.json
+++ b/composer.json
@@ -5,19 +5,22 @@
     "type": "project",
     "license": "MIT",
     "require": {
-        "php": ">=5.6",
-        "cakephp/cakephp": "3.8.*",
-        "cakephp/migrations": "^2.0.0",
-        "cakephp/plugin-installer": "^1.0",
-        "mobiledetect/mobiledetectlib": "2.*"
+        "php": ">=8.2,<8.5",
+        "cakephp/cakephp": "5.2.*",
+        "cakephp/migrations": "^4.0",
+        "cakephp/plugin-installer": "^2.0",
+        "mobiledetect/mobiledetectlib": "^3.74",
+        "paragonie/csp-builder": "^3.0"
     },
     "require-dev": {
-        "cakephp/bake": "^1.9.0",
-        "cakephp/cakephp-codesniffer": "^3.0",
-        "cakephp/debug_kit": "^3.17.0",
-        "josegonzalez/dotenv": "3.*",
-        "phpunit/phpunit": "^5|^6",
-        "psy/psysh": "@stable"
+        "cakephp/bake": "^3.0",
+        "cakephp/cakephp-codesniffer": "^4.0",
+        "cakephp/debug_kit": "^5.0",
+        "josegonzalez/dotenv": "^3.0",
+        "phpunit/phpunit": "^10.1",
+        "psy/psysh": "^0.11",
+        "rector/rector": "^0.18",
+        "rector/rector-cakephp": "^0.11.8"
     },
     "suggest": {
         "markstory/asset_compress": "An asset compression plugin which provides file concatenation and a flexible filter system for preprocessing and minification.",
@@ -28,26 +31,24 @@
             "App\\": "src/"
         }
     },
-    "autoload-dev": {
-        "psr-4": {
-            "App\\Test\\": "tests/",
-            "Cake\\Test\\": "vendor/cakephp/cakephp/tests/"
-        }
-    },
     "scripts": {
         "post-install-cmd": "App\\Console\\Installer::postInstall",
         "post-create-project-cmd": "App\\Console\\Installer::postInstall",
-        "post-autoload-dump": "Cake\\Composer\\Installer\\PluginInstaller::postAutoloadDump",
         "check": [
-            "@test",
             "@cs-check"
         ],
-        "cs-check": "phpcs --colors -p --standard=vendor/cakephp/cakephp-codesniffer/CakePHP src/ tests/",
-        "cs-fix": "phpcbf --colors --standard=vendor/cakephp/cakephp-codesniffer/CakePHP src/ tests/",
-        "test": "phpunit --colors=always"
+        "cs-check": "phpcs --colors -p --standard=vendor/cakephp/cakephp-codesniffer/CakePHP src/",
+        "cs-fix": "phpcbf --colors --standard=vendor/cakephp/cakephp-codesniffer/CakePHP src/"
     },
     "prefer-stable": true,
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "platform": {
+            "php": "8.2"
+        },
+        "allow-plugins": {
+            "cakephp/plugin-installer": true,
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     }
 }
